Story 2015: Code fixes and docker updates.